<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2013 Alex Burka

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <!-- titles and such -->
    <string name="app_name">Hall Monitor</string>
    <string name="app_name_framework">Hall Monitor (Framework Test)</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="action_settings">Settings</string>

    <!-- admin receiver -->
    <string name="admin_excuse">Hall Monitor needs to be able to lock the screen.</string>
    <string name="admin_granted">Hall Monitor admin status granted!</string>
    <string name="admin_revoked">Hall Monitor admin status revoked!</string>
    <string name="admin_refused">View cover service requires admin status</string>

    <!-- notification listener -->
    <string name="notif_please_check">To enable this setting, check the Hall Monitor box and hit the back button.</string>
    <string name="notif_please_uncheck">To disable this setting, uncheck the Hall Monitor box and hit the back button.</string>
    <string name="notif_left_checked">You didn\'t uncheck the box, so the notification service is still running.</string>
    <string name="notif_left_unchecked">You didn\'t check the box! Are you trying to make me crash?</string>

    <!-- preferences -->
    <string name="pref_enabled">Enable</string>
    <string name="pref_enabled_summary">Whether the view cover service is enabled and runs at boot</string>
    <string name="pref_enabled_title">General Settings</string>
    <string name="pref_notifications">Show notification icons</string>
    <string name="pref_notifications_summary">If this is enabled, you will see the current notifications icons when the screen turns on while the cover is closed.</string>
    <string name="pref_delay">Covered lock screen timeout</string>
    <string name="pref_delay_summary">When the cover is closed, Hall Monitor stays up for this many milliseconds. If set to 0, the screen turns off immediately.</string>
    <string name="pref_dim">Dim covered lock screen</string>
    <string name="pref_dim_summary">When the cover is closed and Hall Monitor is up (see above), should the screen dim?</string>
    
    <string name="pref_runasroot">Root Features</string>
    <string name="pref_runasroot_summary">Should the app run with root permissions (required for most features) - allow permanent root access for best results.</string>

    <string name="pref_optional">Optional Features</string>
    <string name="pref_optional_summary">Click through to enable/disable features</string>

    <string name="pref_widgets">Widget Settings</string>
    <string name="pref_widgets_summary">Click through to configure widgets</string>
    <string name="pref_default_widget">Show alternative widget</string>
    <string name="pref_default_widget_summary">Whether to use a 3rd party widget inside the cover window as the default view</string>
    <string name="pref_media_widget">Media Widget</string>
    <string name="pref_media_widget_summary">Whether to use a 3rd party widget inside the cover window to show when media is playing or headphones are connected</string>
    <string name="pref_alarm_controls">Alarm Controls</string>
    <string name="pref_alarm_controls_summary">Whether to show alarm dismiss and snooze buttons in the cover window if the alarm goes off whilst the cover is closed</string>
    
    <string name="pref_phone_screen">Phone Controls</string>
    <string name="pref_phone_screen_summary">Whether to show phone call accept and reject buttons if the phone rings whilst the cover is closed (touch for more)</string>
    <string name="pref_phone_screen_title">Phone Controls</string>
    <string name="pref_phone_controls">Phone Controls Enable</string>
    <string name="pref_phone_controls_summary">Whether to show phone call accept and reject buttons if the phone rings whilst the cover is closed</string>
    <string name="pref_phone_controls_tts">Text-To-Speech</string>
    <string name="pref_phone_controls_tts_summary">Speaks the caller ID of incoming calls based on your phone´s stored contacts. connected headset is required.</string>
    <string name="pref_phone_controls_tts_delay">Text-To-Speech Delay</string>
    <string name="pref_phone_controls_tts_delay_summary">Delay before speaking the caller ID of incoming calls.</string>
    <string name="pref_phone_controls_speaker">Speaker Enable</string>
    <string name="pref_phone_controls_speaker_summary">suppress headset check</string>
    <string name="pref_gyroscope_enabled">enable gyroscope while a call</string>
    <string name="pref_gyroscope_enabled_summary">use this option, if not provided by operating system by default</string>
    <string name="pref_phone_preview_summary">Enter a number and verify your setup.</string>
    <string name="pref_phone_preview_input_message">enter a number</string>
    <string name="pref_resize_screen">Size &amp; Position</string>
    <string name="pref_resize_screen_summary">open preview</string>

    <string name="pref_flash_controls">Torch Controls</string>
    <string name="pref_flash_controls_summary">Whether to include a button to turn the torch on and off on the lock screen</string>
    <string name="pref_camera_controls">Camera Controls</string>
    <string name="pref_camera_controls_summary">Whether to include a button to activate the camera on the lock screen</string>
    
    <string name="pref_default_bgcolor">Background color</string>
    <string name="pref_default_bgcolor_summary">Background of the view you will see through the closed cover</string>
    <string name="pref_default_fgcolor">Foreground color</string>
    <string name="pref_default_fgcolor_summary">Text color for the clock you will see through the closed cover</string>

    <!-- version upgrade dialog -->
    <string name="firstrun_message">I see you\'ve upgraded to version %s! Be sure to click on everything, there are tons of new features.</string>
    <string name="firstrun_ok">OK</string>

    <!-- random strings -->
    <string name="hall_file">/sys/devices/virtual/sec/sec_key/hall_detect</string>
    <string name="pref_about">About Hall Monitor</string>
	<string name="pref_about_summary">Hall Monitor version 0.0.2a.\nCopyright 2013 Alex Burka, released under the Apache v2 License.\nFeedback: android@alexburka.com</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_preview">Preview</string>
    <string name="pref_test">Test</string>
    <string name="title_activity_window">WindowActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="snooze">SNOOZE</string>
    <string name="dismiss">DISMISS</string>
    <string name="caller_name">Caller Name</string>
    <string name="caller_number">+49 30 1234 5678</string>
    <string name="unknown_caller">unknown caller</string>
    <string name="instruction_name">close cover</string>
    <string name="instruction_arrange">slide and zoom to arrange view</string>

    <!-- constants for intents -->
    <string name="ACTION_SEND_TO_SPEECH_RECEIVE">org.durka.hallmonitor.sendTextToSpeech</string>
    <string name="ACTION_STOP_TO_SPEECH_RECEIVE">org.durka.hallmonitor.stopTextToSpeech</string>
    <string name="ACTION_RESTART_DEFAULT_ACTIVITY">org.durka.hallmonitor.restartDefaultActivity</string>
    <string name="ACTION_RESTART_FRAMEWORK_TEST">org.durka.hallmonitor.restartFrameworkTest</string>
    <!-- clock format -->
    <string name="styled_12_hour_clock">hh:mm aaa\nEEEE, dd.MM.</string>
    <string name="styled_24_hour_clock">HH:mm\nEEEE, dd.MM.</string>

</resources>

