<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_settings">
        <CheckBoxPreference
            android:key="pref_phone_controls_tts"
            android:title="@string/pref_phone_controls_tts"
            android:summary="@string/pref_phone_controls_tts_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="pref_phone_controls_tts_delay"
            android:title="@string/pref_phone_controls_tts_delay"
            android:summary="@string/pref_phone_controls_tts_delay_summary"
            android:entries="@array/ttsDelayNames"
            android:entryValues="@array/ttsDelayValues"
            android:defaultValue="500"
            android:selectable="true"/>
        <CheckBoxPreference
            android:key="pref_phone_controls_speaker"
            android:title="@string/pref_phone_controls_speaker"
            android:summary="@string/pref_phone_controls_speaker_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_gyroscope_enabled"
            android:title="@string/pref_gyroscope_enabled"
            android:summary="@string/pref_gyroscope_enabled_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_test">
        <PreferenceScreen
            android:title="@string/pref_preview"
            android:summary="@string/pref_phone_preview_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="org.durka.hallmonitor_framework_test"
                android:targetClass="org.durka.hallmonitor_framework_test.ComponentTestActivity">
                <extra
                    android:name="preview"
                    android:value="phoneWidget"
                />
            </intent>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>